# architecture-diagram

./: README.md  architecture-diagram.cabal  stack.yaml
app/: Main.hs  Wiring.hs
examples/: diagramA.json  diagramA.yaml
src/ArchitectureDiagram/: Aeson.hs  Console.hs
src/ArchitectureDiagram/Console/: Adapt.hs  Class.hs  Generate.hs  Types.hs
src/ArchitectureDiagram/Console/Impl/: Abstract.hs  IO.hs
src/ArchitectureDiagram/Data/: Edge.hs  Graph.hs  Node.hs  ToStatement.hs
src/ArchitectureDiagram/FileManager/: Class.hs
src/ArchitectureDiagram/Source/: Json.hs
src/ArchitectureDiagram/Source/Json/: Adapt.hs  Aeson.hs  Types.hs
test/ArchitectureDiagram/Console/: AdaptSpec.hs  GenerateSpec.hs
test/ArchitectureDiagram/Console/Impl/: AbstractSpec.hs
test/ArchitectureDiagram/Data/: EdgeSpec.hs  GraphSpec.hs  NodeSpec.hs
test/ArchitectureDiagram/Source/: JsonSpec.hs
