name:
  architecture-diagram
version:
  0.1.0.0
synopsis:
  Generate an architecture diagram (JSON -> GraphViz Dot)
description:
  Please see README.md
homepage:
  https://github.com/cjdev/architecture-diagram#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  jvargas@cj.com
copyright:
  2016 CJ Affiliate by Conversant
category:
  Architecture
build-type:
  Simple
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    ArchitectureDiagram.Data.Node
    ArchitectureDiagram.Data.Edge
    ArchitectureDiagram.Data.Graph
    ArchitectureDiagram.Console.Class
    ArchitectureDiagram.Console.Generate
    ArchitectureDiagram.Console.Impl.IO
    ArchitectureDiagram.Source.Json
    ArchitectureDiagram.Target.Dot
  build-depends:
      base >= 4.7 && < 5
    , language-dot
    , text-conversions
    , text
    , aeson
    , containers
    , bytestring
    , mtl
    , data-default
  default-language:
    Haskell2010

executable architecture-diagram-generator
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , architecture-diagram
    , aeson
    , mtl
    , language-dot
    , transformers
  default-language:
    Haskell2010

test-suite architecture-diagram-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , architecture-diagram
    , language-dot
    , text
    , text-conversions
    , hspec
    , aeson
    , test-fixture
    , bytestring
    , mtl
    , data-default
    , containers
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010
  default-extensions:
    TypeSynonymInstances
    FlexibleInstances
    MultiParamTypeClasses

source-repository head
  type:
    git
  location:
    https://github.com/cjdev/architecture-diagram
